fix another bug that caused invalid map state in which polygons could be moved even though a popup is open, make sure flag and coin icons and text line up properly on mobile, update dev dependencies

--- a/app/src/index.scss
+++ b/app/src/index.scss
@@ -27,15 +27,18 @@ body {
   background-size: contain;
   background-position: 50%;
   background-repeat: no-repeat;
-  background-color: #fff;
   border-radius: 50%;
   position: relative;
   display: inline-block;
   line-height: 1em;
-  width: 1em;
+  width: 1.3333333333em;
 
   &:before {
     content: '\00a0';
+  }
+
+  @media (min-width: 992px) {
+    width: 1em;
   }
 }
 
