--- a/app/src/map/map.scss
+++ b/app/src/map/map.scss
@@ -6,7 +6,7 @@
     width: 100%;
     height: 500px;
 
-    @media (min-width: 1000px) {
+    @media (min-width: 992px) {
         height: 900px;
     }
 }
